--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dependencies": {
     },
     "devDependencies": {
-        "should"                : "0.6.3"
+        "should"                : "0.6.3",
+        "mocha"                 : "1.15.1"
     },
     "scripts": {
-        "test"                  : "mocha"
+        "test"                  : "./node_modules/.bin/mocha --recursive -R xunit test/ > test-reports.xml"
     },
     "repository"                : "https://github.com/nherment/example-nodejs",
     "main"                      : "index"
